NEWS for the R Package Luminescence

Changes in version 0.5.0 (, 2015):

  Changes S4-objects, methods, classes:

         • Dummy

  Bugfixes and changes:

         • Dummy
