@@ -118,7 +118,7 @@
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team"
 "Risoe.BINfileData2RLum.Data.Curve","Convert an element from a Risoe.BINfileData object to an RLum.Data.Curve<br /> object","<br /> The function converts one specified single record from a Risoe.BINfileData<br /> object to an RLum.Data.Curve object.<br />","0.1","2015-04-30","12:03:09
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team"
-"RLum-class","Class  \"RLum\"","<br /> Abstract class for data in the package Luminescence<br />",NA,NA,NA,"<br /> Sebastian Kreutzer, 2013 (Freiberg Instruments/JLU Giessen, Germany)<br />"
+"RLum-class","Class  \"RLum\"","<br /> Abstract class for data in the package Luminescence<br />",NA,NA,NA,"<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />"
 "RLum.Analysis-class","Class  \"RLum.Analysis\"","<br /> Object class containing analysis data for protocol analysis.<br />",NA,NA,NA,"<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />"
 "RLum.Data-class","Class  \"RLum.Data\"","<br /> Generalized virtual data class for luminescence data.<br />",NA,NA,NA,"<br /> Sebastian Kreutzer, 2013 (Freiberg Instruments/JLU Giessen, Germany)<br />"
 "RLum.Data.Curve-class","Class  \"RLum.Data.Curve\"","<br /> Class for luminescence curve data.<br />",NA,NA,NA,"<br /> Sebastian Kreutzer Freiberg Instruments/JLU Giessen (Germany)<br />"
