@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Wed May 20 00:03:22 2015
+% Wed May 20 23:53:45 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -125,7 +125,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   65 & Risoe.BINfileData2RLum.Data.Curve & Convert an element from a Risoe.BINfileData object to an RLum.Data.Curve$<$br /$>$ object & $<$br /$>$ The function converts one specified single record from a Risoe.BINfileData$<$br /$>$ object to an RLum.Data.Curve object.$<$br /$>$ & 0.1 & 2015-04-30 & 12:03:09
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  66 & RLum-class & Class  "RLum" & $<$br /$>$ Abstract class for data in the package Luminescence$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, 2013 (Freiberg Instruments/JLU Giessen, Germany)$<$br /$>$ \\ 
+  66 & RLum-class & Class  "RLum" & $<$br /$>$ Abstract class for data in the package Luminescence$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$ \\ 
   67 & RLum.Analysis-class & Class  "RLum.Analysis" & $<$br /$>$ Object class containing analysis data for protocol analysis.$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
   68 & RLum.Data-class & Class  "RLum.Data" & $<$br /$>$ Generalized virtual data class for luminescence data.$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, 2013 (Freiberg Instruments/JLU Giessen, Germany)$<$br /$>$ \\ 
   69 & RLum.Data.Curve-class & Class  "RLum.Data.Curve" & $<$br /$>$ Class for luminescence curve data.$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer Freiberg Instruments/JLU Giessen (Germany)$<$br /$>$ \\ 
