@@ -1291,7 +1291,7 @@
 </td>
 <td class=cellinside> 
 </td>
-<td class=cellinside><br /> Sebastian Kreutzer, 2013 (Freiberg Instruments/JLU Giessen, Germany)<br />
+<td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />
 </td></tr>
  
 <tr> 
