@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/Luminescence-package.R
+% Please edit documentation in R/RLum-class.R
 \docType{class}
 \name{RLum-class}
 \alias{RLum-class}
@@ -18,7 +18,7 @@ from it.
 showClass("RLum")
 }
 \author{
-Sebastian Kreutzer, 2013 (Freiberg Instruments/JLU Giessen, Germany)
+Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)
 }
 \references{
 #
